...

    <LinearLayout
        android:id="@+id/llProfileInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlProfile"
        android:layout_above="@id/btnLogout"
        android:background="@color/colorWhite"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

...
