<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softengi.mobcomp.softwareengi_mobile.PlanDetailActivity">

    <EditText
        android:id="@+id/etPlanDetailTitle"
        android:text="@string/etPlanCreateTitle"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPlanDetailRequiredSteps"
        android:text="@string/etPlanCreateRequiredSteps"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPlanDetailTitle" />

    <Button
        android:id="@+id/btnDetailUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@color/colorTurquoise"
        android:textColor="@color/colorWhite"
        android:text="Update"/>

    <Button
        android:id="@+id/btnDetailDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:background="@color/colorTurquoise"
        android:textColor="@color/colorWhite"
        android:text="Delete"/>

</RelativeLayout>
