<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softengi.mobcomp.softwareengi_mobile.PlansFragment">

    <ListView
        android:id="@+id/lvPlans"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/btnCreatePlan"
        android:layout_alignParentTop="true"
        android:divider="@color/colorWhiteTransparent">
    </ListView>

    <Button
        android:id="@+id/btnCreatePlan"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/create"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/transparent_button_background"
        android:backgroundTint="@color/button_turquoise_state"
        android:textColor="@color/button_turquoise_text_state"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_margin="10dp" />

</RelativeLayout>
