<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softengi.mobcomp.softwareengi_mobile.CreatePlanFragment">

    <EditText
        android:id="@+id/etPlanCreateTitle"
        android:hint="@string/etPlanCreateTitle"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPlanCreateRequiredSteps"
        android:hint="@string/etPlanCreateRequiredSteps"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPlanCreateTitle" />

    <Button
        android:id="@+id/btnSubmitPlan"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/transparent_button_background"
        android:backgroundTint="@color/button_turquoise_state"
        android:textColor="@color/button_turquoise_text_state"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_margin="10dp" />

</RelativeLayout>
